# aura-httpd

./: CMakeLists.txt  README.md  call_resource.c  config-test.json  config.json  cppcheck.suppress  entity.c  fs_control.c  fs_memcache.c  fs_node.c  fs_static.c  fs_upload.c  fs_upload_mod_buffer.c  fs_upload_mod_debug.c  fs_upload_mod_file.c  fs_v4l2.c  json-helpers.c  main.c  mime.c  mp_control.c  mp_node.c  run_clang_analyze.sh  run_cppcheck.sh  serdes-json.c  server.c  test-wrapper.c  utils.c  v4l2_read.c  v4l2fs_thread.c  vfs.c
debian/: changelog  control  copyright
include/aura-httpd/: json.h  nodefs.h  server.h  uploadfs.h  utils.h  v4l2fs.h  vfs.h
test-scripts/: basic-wget.sh  common  json-call-async.sh  json-call-sync.sh  json-call.sh  phantom-serdes.js  upload-mode-buf.sh
tests/: open-close.c
www/: aura.js  index.html  test-serdes.html  tests.js  ui.css  upload.html  utils.js
